--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         <br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br />
-        <p>наб. Принсенграхт 263-265,
-          <br />
-          Амстердам
+        <p>наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
     </header>
