fixed problems after review

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__links-list">
-          <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a href="#cover" class="header__link header__link_active">главная</a>
+          <li class="header__links-list-item header__links-list-item_no-bullit header__link-list-item_active">
+            <a href="#cover" class="header__link">главная</a>
           </li>
           <li class="header__links-list-item">
             <a href="#lots" class="header__link">посмотреть лоты</a>
@@ -25,13 +25,12 @@
         </ul>
       </nav>
       <a class="header__logo">
-          <img class="header__logo-image" src="/images/logo-black.svg" alt="logo-black">
+          <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип Оно тебе надо">
       </a>
       <address class="header__address">
-        <a class="header__address-phone" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="header__address-contact" href="tel:+99995555555">+9 999 555 5555</a>
         <br />
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br />
+        <a class="header__address-contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
@@ -100,7 +99,7 @@
       <section class="about" id="about">
         <div class="about__column">
           <div class="about__logo">
-            <img src="/images/logo-white.svg" alt="logo-white" class="about__logo-image">
+            <img src="/images/logo-white.svg" alt="Логотип Оно тебе надо" class="about__logo-image">
           </div>
         </div>
         <div class="about__column">
@@ -120,13 +119,9 @@
     </main>
     <footer class="footer">
       <address class="header__address">
-        <a class="header__address-phone" href="tel:+99995555555">+9 999 555 5555</a>
-        <br />
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <br />
-        <p>наб. Принсенграхт 263-265,
-          <br />
-          Амстердам
+        <a class="header__address-contact" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="header__address-contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
       <nav class="footer__menu">
@@ -151,17 +146,17 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="" class="footer__social-link">
-            <img src="/images/yt.svg" alt="yt" class="footer__social-icon">
+            <img src="/images/yt.svg" alt="Youtube лого" class="footer__social-icon">
         </a>
         </li>
         <li class="footer__social-list-item">
           <a href="" class="footer__social-link">
-            <img src="/images/vk.svg" alt="vk" class="footer__social-icon">
+            <img src="/images/vk.svg" alt="Вконтакте лого" class="footer__social-icon">
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="" class="footer__social-link">
-            <img src="/images/pinterest.svg" alt="pinterest" class="footer__social-icon">
+            <img src="/images/pinterest.svg" alt="Pinterest лого" class="footer__social-icon">
           </a>
         </li>
       </ul>
