--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       <a class="header__logo">
           <img class="header__logo-image" src="/images/logo-black.svg" alt="Логотип Оно тебе надо">
       </a>
-      <address class="header__address">
-        <a class="header__address-contact" href="tel:+99995555555">+9 999 555 5555</a>
+      <address class="address">
+        <a class="address-contact" href="tel:+99995555555">+9 999 555 5555</a>
         <br />
-        <a class="header__address-contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address-contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
@@ -118,9 +118,9 @@
       </section>
     </main>
     <footer class="footer">
-      <address class="header__address">
-        <a class="header__address-contact" href="tel:+99995555555">+9 999 555 5555</a>
-        <a class="header__address-contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <address class="address">
+        <a class="address-contact" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address-contact" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p>наб. Принсенграхт 263-265, Амстердам
         </p>
       </address>
